--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Common style  */
+/*////// Common style ////// */
 
 * {
     margin: 0;
@@ -9,7 +9,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-/* Header section style */
+/*///// Header section style //////*/
 
 .header {
     display: flex;
@@ -44,7 +44,7 @@ body {
 }
 
 .btn {
-    color: #FFF;
+    color: #fff;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
@@ -56,15 +56,126 @@ body {
     cursor: pointer;
 }
 
-.header-img {
+.header-img-area {
     margin-top: 50px;
     margin-right: 200px;
     max-width: 635px;
     max-height: 800px;
 }
 
-.img {
+.header-img {
     width: 100%;
     height: 100%;
 }
+
+/* /////// Featured section style ///////*/
+
+.featured {
+    background-color: #fff;
+}
+
+.featured-content {
+    margin: 178px 0 128px 0;
+}
+
+.featured-header {
+    margin-bottom: 48px;
+}
+
+.heading-primary {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+.primary-text {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    max-width: 594px;
+    margin: 0 auto;
+}
+
+.featured-img-area {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    column-gap: 24px;
+    margin: 0 auto;
+}
+
+.featured-img-1 {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    width: 310px;
+    height: 428px;
+    padding: 110px 76px 0 76px;
+}
+
+.featured-img-2 {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    width: 370px;
+    height: 370px;
+    padding: 117px 47px 51px 47px;
+}
+
+.featured-img-3 {
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    width: 314px;
+    height: 471px;
+    padding: 67px 75px 0 75px;
+}
+
+.featured-img-title {
+    margin-top: 32px;
+    color: #272727;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+
+/*////// Services section style //////*/
+
+.services {
+    background-color: #fff;
+}
+
+.services-content {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    column-gap: 100px;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+    width: 58%;
+    margin: 0 auto;
+    padding: 85px 175px;
+}
+
+.services-item {
+    text-align: center;
+}
+
+.services-item-text {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 35px;
+}
+
+/*////// Discount section style ///////*/
 
