--- a/style.css
+++ b/style.css
@@ -40,10 +40,11 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    margin: 32px 0 32px 0;
+    margin-top: 32px;
 }
 
 .btn {
+    margin-top: 32px;
     color: #fff;
     font-size: 20px;
     font-style: normal;
@@ -159,7 +160,7 @@ body {
     column-gap: 100px;
     border-radius: 8px;
     background: rgba(39, 39, 39, 0.05);
-    width: 58%;
+    width: 57.5%;
     margin: 0 auto;
     padding: 85px 175px;
 }
@@ -179,3 +180,15 @@ body {
 
 /*////// Discount section style ///////*/
 
+.discount {
+    margin-top: 128px;
+    background-color: rgba(229, 84, 115, 0.05);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 430px 100px 395px;
+}
+
+.discount-content {
+    text-align: center;
+}
