--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ span {
 
 .subscribe {
     border-radius: 8px;
-    background-image: url("./img/Rectangle\ 9.png");
+    background-image: url("./img/Rectangle 9.png");
     background-repeat: no-repeat;
     margin: 128px auto;
     width: 76%;
